2008-10-04  Matt Lilek  <webkit@mattlilek.com>

        Not reviewed, attempt to fix Gtk build.

        * GNUmakefile.am:

2008-10-03  Timothy Hatcher  <timothy@apple.com>

        Move the Web Inspector files into a top-level "inspector" folder.

        https://bugs.webkit.org/show_bug.cgi?id=21359

        Reviewed by Dave Hyatt.

        * GNUmakefile.am:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * WebCoreSources.bkl:
        * inspector/InspectorClient.h: Renamed from WebCore/page/InspectorClient.h.
        * inspector/InspectorController.cpp: Renamed from WebCore/page/InspectorController.cpp.
        * inspector/InspectorController.h: Renamed from WebCore/page/InspectorController.h.
        * inspector/JavaScriptCallFrame.cpp: Renamed from WebCore/page/JavaScriptCallFrame.cpp.
        * inspector/JavaScriptCallFrame.h: Renamed from WebCore/page/JavaScriptCallFrame.h.
        * inspector/JavaScriptCallFrame.idl: Renamed from WebCore/page/JavaScriptCallFrame.idl.
        * inspector/JavaScriptDebugListener.h: Renamed from WebCore/page/JavaScriptDebugListener.h.
        * inspector/JavaScriptDebugServer.cpp: Renamed from WebCore/page/JavaScriptDebugServer.cpp.
        * inspector/JavaScriptDebugServer.h: Renamed from WebCore/page/JavaScriptDebugServer.h.
        * inspector/JavaScriptProfile.cpp: Renamed from WebCore/page/JavaScriptProfile.cpp.
        * inspector/JavaScriptProfile.h: Renamed from WebCore/page/JavaScriptProfile.h.
        * inspector/JavaScriptProfileNode.cpp: Renamed from WebCore/page/JavaScriptProfileNode.cpp.
        * inspector/JavaScriptProfileNode.h: Renamed from WebCore/page/JavaScriptProfileNode.h.
        * inspector/front-end/Breakpoint.js: Renamed from WebCore/page/inspector/Breakpoint.js.
        * inspector/front-end/BreakpointsSidebarPane.js: Renamed from WebCore/page/inspector/BreakpointsSidebarPane.js.